# MedFeedJournalTracker

./: .env.example  .gitignore  CLEANUP_FEATURE_SUMMARY.md  DATABASE_CLEANUP.md  DEPLOYMENT.md  DEPLOY_TO_RENDER.md  INSTALL.md  JOURNAL_LIST.md  LICENSE  QUICK_REFERENCE.md  README.md  add_new_journals.py  check_database_stats.py  cleanup_database.py  get_user_id.py  list_cloud_journals.py  main.py  pyproject.toml  render.yaml  requirements.txt  setup_cron.bat  setup_cron.sh  test_scrapers.py  update_cloud_journals.py  verify_journals.py  verify_rss_feeds.py  webhook_service.py
.github/workflows/: backfill-embeddings.yml  backfill-summaries.yml  ci.yml  integration.yml  keep-alive.yml  manual-run.yml
agents/: query_agent.py  webhook.py
config/: __init__.py  cleanup_settings.json  journals.json  settings.py  subscribers.json  subscribers.json.example
database/: __init__.py  fix_subscribers_schema.sql  setup_query_rpc.sql  supabase_client.py  supabase_schema.sql
database/migrations/: 2026_05_05_pubmed_for_broken_feeds.sql  (+3 more)
llm/: __init__.py  embedder.py  summarizer.py
notifier/: __init__.py  base_notifier.py  formatter.py  line_notifier.py  telegram_notifier.py
scrapers/: __init__.py  base_scraper.py  elsevier_scraper.py  ieee_rss_scraper.py  pubmed_scraper.py  rss_scraper.py
scripts/: backfill_embeddings.py  backfill_summaries.py  sync_requirements.py
services/: __init__.py  cleanup_service.py  embedding_service.py  fetcher_service.py  line_alert_service.py  llm_service.py  notifier_service.py
sync/: __init__.py  notion_syncer.py
tests/: conftest.py  test_base_scraper.py  test_embedding.py  test_existing_dois.py  test_fetcher_service.py  test_formatter.py  test_line_alert_service.py  test_llm_summarizer.py  test_query_agent.py  test_rss_scraper.py  test_webhook_routing.py  test_webhook_security.py
utils/: __init__.py  logger.py
(+5 files in other folders)
