[project]
name = "medfeed-journal-tracker"
version = "2.0.0"
description = "Automated medical journal tracker with LLM-powered relevance scoring, Telegram notifications, and Notion sync."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shih-Feng Huang", email = "odafeng@hotmail.com" }]
license = { text = "MIT" }

dependencies = [
  # Core scraping
  "feedparser>=6.0.10",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  # DB
  "supabase>=2.0.0",
  # Config
  "python-dotenv>=1.0.0",
  # LLM
  "anthropic>=0.40.0",
  # Notion sync
  "notion-client>=2.2.1",
  # Reliability
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "types-requests",
]

[project.scripts]
medfeed = "main:main"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["webhook_app"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # function calls in defaults (used by FastAPI-like patterns)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
# Lenient mode for initial migration; tighten over time
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
disallow_untyped_defs = false
strict_optional = true
exclude = ["webhook_app/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "integration: requires live network/API (skipped in CI by default)",
]
